--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,4 +1,7 @@
 <navbar></navbar>
-<div class="container">
+<div class="container-fluid">
+	<div class="container top">
+		<ngx-flash-messages></ngx-flash-messages>
+    </div>
     <router-outlet></router-outlet>
 </div>
