--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -1,3 +1,15 @@
-<p>
-  login works!
-</p>
+<div class="container margin">
+	<h2 class="text-center" >Login</h2>
+	<!-- <div class="margin"><ngx-flash-messages></ngx-flash-messages></div> -->
+	<form class="margin" (submit)="onLoginSubmit()">
+		<div class="form-group">
+			<input type="text" class="form-control" [(ngModel)]="username" name="username" id="username" placeholder="username">
+		</div>
+		<div class="form-group">
+			<input type="password" class="form-control" [(ngModel)]="password" name="password" id="password" placeholder="senha">
+		</div>
+		<div class="d-flex justify-content-center">
+			<button class="btn btn-outline-success btn-lg">Cadastrar</button>
+		</div>
+	</form>
+</div>
