--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,16 +1,25 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
-	<a class="navbar-brand" routerLink="/">MyHouseTasks</a>
-	<ul class="nav navbar-nav mr-auto">
-		<li class="nav-item" routerLinkActive = "active">
-			<a class="nav-link" routerLink="/dashboard" >Dashboard</a>
-		</li>
-	</ul>
-	<ul class="nav navbar-nav">
-		<li class="nav-item" routerLinkActive = "active">
-			<a class="nav-link" routerLink="/login" >Login</a>
-		</li>
-		<li class="nav-item" routerLinkActive = "active">
-			<a class="nav-link" routerLink="/register" >Register</a>
-		</li>
-	</ul>
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded navbar-inverse bg-inverse">
+	<div>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<a class="navbar-brand" routerLink="/dashboard">MyHouseTasks</a>
+	</div>
+	<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+		<ul class="nav navbar-nav mr-auto">
+		</ul>
+		<div class="my-2 my-lg-0">
+			<ul class="nav navbar-nav">
+				<li *ngIf="!authService.loggedIn()" class="nav-item" routerLinkActive = "active">
+					<a class="nav-link" [routerLink]="['/login']">Login</a>
+				</li>
+				<li *ngIf="authService.loggedIn()" class="nav-item" routerLinkActive = "active">
+					<a class="nav-link" [routerLink]="['/profile']">Profile</a>
+				</li>
+				<li *ngIf="authService.loggedIn()" class="nav-item" routerLinkActive = "active">
+					<a class="nav-link" (click)=onLogoutClick() [routerLink]="['/login']">Logout</a>
+				</li>
+			</ul>	
+		</div>
+	</div>
 </nav>
