--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
 			<input type="password" class="form-control" [(ngModel)]="password" name="password" id="password" placeholder="senha">
 		</div>
 		<div class="d-flex justify-content-center">
-			<button class="btn btn-outline-success btn-lg">Cadastrar</button>
+			<button class="btn btn-outline-success btn-lg">Entrar</button>
 		</div>
 	</form>
 </div>
