--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -1,5 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 .margin {
 	margin-top: 50px;
-	margin-bottom: auto;
+	margin-bottom: 50px;
+}
+
+.footer {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	padding: 1rem;
+	background-color: #efefef;
+	text-align: center;
 }
