--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -3,6 +3,8 @@
 		<sidebar></sidebar>
 	</div>
 	<div class="col-md-10">
-		<router-outlet></router-outlet>
+		<div class="container">
+			<router-outlet></router-outlet>
+		</div>
 	</div>
 </div>
