--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,6 +1,6 @@
 <navbar></navbar>
 <div class="container-fluid">
-	<div class="container top">
+	<div class="container-fluid top">
 		<ngx-flash-messages></ngx-flash-messages>
     </div>
     <router-outlet></router-outlet>
