--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 		<sidebar></sidebar>
 	</div>
 	<div class="col-md-10">
-		<div class="container">
+		<div class="container-fluid">
 			<router-outlet></router-outlet>
 		</div>
 	</div>
