--- a/angular-src/src/app/components/tasklist/tasklist.component.css
+++ b/angular-src/src/app/components/tasklist/tasklist.component.css
@@ -13,6 +13,12 @@
 	text-align: center;
 }
 
-.task-select {
-	background-color: #FAFACE;
+.task-complete {
+	text-decoration: line-through;
+	color: #888888; 
+}
+
+#clean {
+	margin-top: 15px;
+	margin-bottom: 0px;
 }
