--- a/angular-src/src/app/components/tasklist/tasklist.component.html
+++ b/angular-src/src/app/components/tasklist/tasklist.component.html
@@ -3,23 +3,26 @@
 		<h2>Lista de Tarefas</h2>
 	</div>
 	<div class="container-fluid">
-		<form class="">	
+		<form (submit)="addTask()" >	
 			<div class="input-group new-task input-group-lg">
-				<input  [(ngModel)]="newTask" type="text" class="form-control" placeholder="Adicionar tarefa!" name="newName">
+				<input  [(ngModel)]="newTitle" type="text" class="form-control" placeholder="Adicionar tarefa!" name="newTask">
 				<span class="input-group-btn" >
-					<button *ngIf="newTask != '' && newTask != undefined" class="btn btn-secondary" type="button">Add!</button>
+					<button *ngIf="newTitle != '' && newTitle != undefined" class="btn btn-secondary">Add!</button>
 				</span>
 			</div>
 		</form>
-		<div class="tasks">
-			<div class="row ">
+		<div  *ngFor="let task of tasks" class="tasks">
+			<div class="row" [ngClass]="{'task-complete': task.isComplete}">
 				<div class="col-sm-1 checkbox">
-					<input type="checkbox" name="" class="form-control">
+					<input (click)="onCheck($event, task)" type="checkbox" name="isComplete" [(ngModel)]="task.isComplete" class="form-control">
 				</div>
 				<div class="col-sm-11">
-					adfadkjfdshakj
+					{{ task.title }}
 				</div>
 			</div>
+		</div>
+		<div *ngIf="completeTask > 0" class="d-flex float-right margin">
+			<button (click)="clean()" class="btn btn-outline-danger" id="clean">Limpar</button>
 		</div>
 	</div>
 </div>
