--- a/angular-src/src/app/components/shoplist/shoplist.component.html
+++ b/angular-src/src/app/components/shoplist/shoplist.component.html
@@ -1,3 +1,6 @@
-<p>
-  shoplist works!
-</p>
+<div class="container-fluid">
+	<div class="jumbotron jumbotron-fluid text-center">
+		<h2>Lista de compras</h2>
+	</div>
+	<router-outlet></router-outlet>
+</div>
